2006-06-16  Phil Muldoon  <pmuldoon@redhat.com>

	* druid/CreateFryskSessionDruid.java (getProcessObserverControls):
	Added observerDescriptionTextView TextView.
	Added observerDescBuffer TextBuffer.
	* glade/frysk_create_session_druid.glade: Added description textview
	for observers.

	* glade/procpop.glade: Added Observer Description
	to editObserverDialog.

	* Gui.java: Added Session Manager to taskbar
	control center.
	* SessionManagerGui.java: Set the Frysk icon
	* CreateFryskSessionDruid.java: Ditto.

2006-06-15  Phil Muldoon  <pmuldoon@redhat.com>

	* SessionManagerGui.java (getSessionManagementControls):
	setStickySelect true.

2006-06-15  Sami Wagiaalla  <swagiaal@redhat.com>

	* glade/procpop.glade: Finished off accessability
	info.

2006-06-15  Phil Muldoon  <pmuldoon@redhat.com>

	* druid/CreateFryskSessionDruid.java (setNewSessionMode): Add
	Cancel Button. Create edit session boolean identifier.
	(getDruidStructureControls): Added edit session name
	
	* SessionManagerGui.java: Added double-click listener to
	launch a session.
	(getSessionManagementControls): Remove cell renderer text 
	edit event; it was interfering with double click listener.

2006-06-14  Phil Muldoon  <pmuldoon@redhat.com>

	* SessionManagerGui.java (lifeCycleQuery): Fix bz 2769. 
	Change behaviour of Window close event to System.exit(), 
	not Window.hideAll().

2006-06-14  Sami Wagiaalla  <swagiaal@redhat.com>

	* glade/procpop.glade: removed all refresh buttons.
	Added some padding, removed borders of proc view.
	Added partial accessability info.
	Removed ProgramView stuff.

2006-06-14  Andrew Cagney  <cagney@redhat.com>

	* test/dogtail_scripts/frysk_suite.sh: Rename ...
	* test/dogtail_scripts/frysk_suite.in: ... to this.

2006-06-13  Phil Muldoon  <pmuldoon@redhat.com>

	* Gui.java: Add option to restart core event loop.
	Rewrote error message.

2006-06-12  Phil Muldoon  <pmuldoon@redhat.com>

	* glade/frysk_create_session_druid.glade: Added spacing consistent