@@ -1,3 +1,14 @@
+2006-06-19  Phil Muldoon  <pmuldoon@redhat.com>
+
+	* SessionManagerGui.java: Remove debugExecutable glade based variables. 
+	(getDebugExecutableControls): Removed.
+	(setButtonStates): Alter states to reflect removed controls.
+	(toggleControls): Set toggles-states to toggle debugSingleProcessAction.
+	
+	* glade/frysk_session_manager.glade: Removed Debug Executable radio button 
+	and file chooser.
+	
+
 2006-06-16  Phil Muldoon  <pmuldoon@redhat.com>
 
 	* druid/CreateFryskSessionDruid.java (getProcessObserverControls):
